refactor: fix regression caused by move back to java 8